[project]
name = "caviardeul"
version = "2.0.0"
description = ""
authors = ["julien <git@julienc.io>"]
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "django~=5.2.5",
    "gunicorn~=23.0",
    "uvicorn~=0.38.0",
    "psycopg[binary]~=3.2.1",
    "django-ninja~=1.5.0",
    "httpx~=0.28.0",
    "cryptography~=46.0",
    "beautifulsoup4~=4.14.2",
    "django-cors-headers~=4.9.0",
    "redis~=7.0.1",
    "pydantic~=2.11.1",
    "sentry-sdk[django]~=2.44.0",
    "django-import-export>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=1.1",
    "pytest-django~=4.8",
    "pytest-cov~=7.0",
    "pytest-socket~=0.7",
    "pytest-httpx~=0.30",
    "factory-boy~=3.3"
]

[tool.coverage.run]
include = ["caviardeul/**/*.py"]
omit = ["caviardeul/tests/*"]

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-hosts=redis,postgres,localhost"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    # https://github.com/vitalik/django-ninja/issues/1245
    "ignore::pydantic.PydanticDeprecatedSince20",
    "ignore::pydantic.PydanticDeprecatedSince211",
]

[tool.ruff.lint]
extend-select = ["I"]
