[project]
name = "caviardeul"
version = "2.0.0"
description = ""
authors = ["julien <git@julienc.io>"]
license = "MIT"
requires-python = ">=3.14"

dependencies = [
    "django~=6.0.1",
    "gunicorn~=23.0",
    "uvicorn~=0.40.0",
    "psycopg[binary]~=3.3.2",
    "django-ninja~=1.5.0",
    "httpx~=0.28.0",
    "cryptography~=46.0",
    "beautifulsoup4~=4.14.2",
    "django-cors-headers~=4.9.0",
    "redis~=7.1.0",
    "pydantic~=2.12.4",
    "sentry-sdk[django]~=2.49.0",
    "django-import-export>=4.2.0",
    "taskiq>=0.12.0",
    "taskiq-redis>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.1",
    "pytest-django~=4.8",
    "pytest-cov~=7.0",
    "pytest-env>=1.2.0",
    "pytest-httpx~=0.30",
    "pytest-socket~=0.7",
    "factory-boy~=3.3",
]

[tool.coverage.run]
include = ["caviardeul/**/*.py"]
omit = ["caviardeul/tests/*"]

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-hosts=redis,postgres,localhost"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = ["ENVIRONMENT=pytest"]
filterwarnings = [
    "error",
    # https://github.com/vitalik/django-ninja/pull/1558
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:ninja",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint]
extend-select = ["I"]
